8242465: jextract should skip variables and struct fields with types that cannot be handled
Reviewed-by: mcimadamore